# maintanance-problem-memetic

./: .gitignore  README.md  pyproject.toml
input/: A_03.json  A_08.json  A_11.json  A_12.json  B_02.json  B_06.json  B_08.json  B_09.json  B_11.json  B_13.json  parameters.json
logs/: log_A_02.txt  log_A_03.txt  log_A_07.txt  log_A_08.txt  log_A_09.txt  log_A_11.txt  log_A_12.txt  log_B_01.txt  log_B_02.txt  log_B_06.txt  log_B_07.txt  log_B_08.txt  log_B_09.txt  log_B_11.txt  log_B_13.txt  log_B_14.txt  log_C_01.txt  log_C_02.txt  log_C_06.txt  log_C_07.txt  log_C_09.txt  log_C_11.txt  log_C_12.txt
logs_backup/20251114-123943/: log_A_01.txt  log_A_02.txt  log_A_03.txt  log_A_04.txt  log_A_05.txt  log_A_06.txt  log_A_07.txt  log_A_08.txt  log_A_09.txt  log_A_10.txt  log_A_11.txt  log_A_12.txt  log_A_13.txt  log_A_14.txt  log_A_15.txt  log_B_01.txt  log_B_02.txt  log_B_03.txt  log_B_04.txt  log_B_05.txt  log_B_06.txt  log_B_07.txt  log_B_08.txt  log_B_09.txt  log_B_10.txt  log_B_11.txt  log_B_12.txt  log_B_13.txt  log_B_14.txt  log_B_15.txt  log_C_01.txt  log_C_02.txt  log_C_03.txt  log_C_04.txt  log_C_05.txt  log_C_06.txt  log_C_07.txt  log_C_08.txt  log_C_09.txt  log_C_10.txt  (+5 more)
output_backup/20251114-123943/: A_01.txt  A_02.txt  A_04.txt  A_05.txt  A_06.txt  A_07.txt  A_08.txt  A_10.txt  A_11.txt  A_12.txt  A_13.txt  A_14.txt  A_15.txt  B_01.txt  B_02.txt  B_03.txt  B_04.txt  B_05.txt  B_06.txt  B_07.txt  B_08.txt  B_09.txt  B_10.txt  B_11.txt  B_12.txt  B_13.txt  B_14.txt  B_15.txt  C_01.txt  C_02.txt  C_03.txt  C_04.txt  C_05.txt  (+10 more)
src/: main.py
utils/: log.py
(+6 files in other folders)
