[tool.poetry]
name = "maintanance-problem-memetic"
version = "0.1.0"
description = ""
authors = ["Emily Oliveira <emilybtoliveira@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
gurobipy = "^12.0.3"
pydantic = "^2.12.3"
numpy = "^2.3.4"
numba = "^0.62.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"